--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@
 }
 
 #input-box{
-    width: 340px;
-    height: 340px;
+    width: 380px;
+    height: 380px;
     border-radius: 30px;
     box-shadow: 6px 6px 20px #0d47d7, -6px -6px 12px #ffffff;
     border: none;
@@ -253,8 +253,8 @@ span:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #5e9ccc;
-    text-shadow: 3px 3px 5px blue,5px 5px 8px white,8px 8px 15px whitesmoke;
+    color: #ebeff1;
+    text-shadow: 3px 3px 5px rgb(203, 15, 190),5px 5px 8px white,8px 8px 15px whitesmoke;
 }
 #img-val{
     width: 50px;
@@ -264,10 +264,24 @@ span:hover{
     border: none;
     outline: none;
     width: 45px;
+    border-radius: 40px;
     box-shadow: 0px 0px 20px blueviolet;
 }
 #input-color:hover{
     box-shadow:0px 0px 20px #0d47d7;
     transform: scale(1.2);
 
+}
+label{
+    color: #16909b;
+    font-size: 20px;
+    font-weight: 900;
+    text-shadow: 5px 5px 5px rgb(116, 116, 190),12px 10px 20px rgb(117, 21, 21),12px 12px 15px rgb(239, 220, 220);
+}
+h2{
+    color: #9b3716;
+    font-size: 20px;
+    font-weight: 800;
+    text-shadow: 5px 5px 5px rgb(116, 116, 190),12px 10px 20px rgb(117, 21, 21),12px 12px 15px rgb(239, 220, 220);
+  
 }
